# ORGTools

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
libs/MIDIParse/: CMakeLists.txt
src/: MIDI2ORG.cpp  MIDI2ORG.h  Main.cpp  Main.h  ORGCopy.cpp  ORGCopy.h  SharedUtil.cpp  SharedUtil.h  WindowView.cpp  WindowView.h
